Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2007-04-03 Kimmo
 PATCH: [ 1693113 ] Enable ShellExtension for folder backgrounds
  ShellExtension: WinMergeShell.cpp WinMergeShell.rgs

2007-04-03 Takashi
 BUG: [ 1693275 ] File extension filter does not work correctly
  Src: FileFilterHelper.cpp

2007-04-02 Kimmo
 RFE: [ 1685190 ] Add 1 pixel margin to line numbers area
  Src/editlib: ccrystaltextview.cpp
 PATCH: [ 1693041 ] Fix couple of editor bugs
  Submitted by Jeremy Dewey
  editlib: ccrystaleditview.cpp ccrystaltextbuffer.cpp

2007-04-01 Tim
 PATCH: [ 1692033 ] Use SetResourceVersions.wsf with 3 version numbers
  Src: SetResourceVersions.wsf
 PATCH: [ 1692097 ] Updated Toolbar Enabled/Disabled BMP
  Submitted by Alexander Skinner
  Src/res: ToolbarDisabled.bmp ToolbarEnabled.bmp

2007-03-31 Takashi
 BUG: [ 1630762 ] Cannot save project file if including non-ascii chars
  Src: Merge.dsp ProjectFile.cpp

2007-03-31 Takashi
 PATCH: [ 1603292 ] Add tab interface for MDI child windows
  Src: MainFrm.cpp MainFrm.h Merge.dsp Merge.rc OptionsDef.h OptionsInit.cpp
   resource.h
  Src/Common: MDITabBar.cpp MDITabBar.h
  Src/Languages/*: Merge*.rc
 Fix broken resources
  Src/Languages/*: Merge*.rc

2007-03-31 Kimmo
 PATCH: [ 1689293 ] Batch file for building WinMerge files
  : buildall.bat

2007-03-30 Kimmo
 PATCH: [ 1690503 ] fix for bug 1659281 "WinMerge forgets monitor to use when th
  Submitted by from Dan Pidcock
  Src: MainFrm.cpp

2007-03-30 Gal
 RFE: [ 1690346 ] Manual selection of syntax highlighting scheme
  Src/Languages/*: Merge*.rc
  Src: Merge.rc MergeEditView.cpp MergeEditView.h resource.h

2007-03-29 Tim
 PATCH: [ 1646210 ] Use CSS for HTML report
  Src: DirCmpReport.cpp
 PATCH: [ 1686279 ] New icons for Copy and Advance
  Src/res: ToolbarDisabled.bmp ToolbarEnabled.bmp

2007-03-29 Kimmo
 PATCH: [ 1689854 ] C# development file filter
  Filters new file: CSharp_loose.flt